added support for propertysetter being an external resource file; some refactorings along the line