@@ -15,7 +15,7 @@ import java.util.List;
 public class HttpCodeValidator {
     public static final HttpCodeValidator DEFAULT =
             new HttpCodeValidator(
-                    Arrays.asList(200),
+                    List.of(200),
                     Arrays.asList(0, 400, 401, 402, 403, 404, 409, 410, 500, 501, 502));
     private List<Integer> runOnHttpCode;
     private List<Integer> skipOnHttpCode;
